--- a/assets/css/mediaquerys/mediaquerys.css
+++ b/assets/css/mediaquerys/mediaquerys.css
@@ -1,7 +1,8 @@
 @import url('asideMQ.css');
 @import url('headerMQ.css');
+@import url('mainContentMQ.css');
 
-@media only screen and (min-width: 600px) {
+@media only screen and (min-width: 700px) {
     body{
         display:flex;
     }
